force-app/main/default/objects/dupcheck__dc3Log__c/dupcheck__dc3Log__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Log</label>
    <nameField>
        <displayFormat>DCLOG{00000000}</displayFormat>
        <label>Plauti Deduplicate Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>