force-app/main/default/objects/dupcheck__dc3Log__c/fields/dupcheck__data__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__data__c</fullName>
    <label>Log Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>