force-app/main/default/objects/dupcheck__dc3Log__c/fields/dupcheck__Object__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Object__c</fullName>
    <externalId>true</externalId>
    <label>Object</label>
    <length>18</length>
    <type>Text</type>
</CustomField>