force-app/main/default/objects/dupcheck__dc3Log__c/fields/dupcheck__Record__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Record__c</fullName>
    <label>Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>