force-app/main/default/objects/dupcheck__dc3Log__c/fields/dupcheck__Type__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Type__c</fullName>
    <externalId>true</externalId>
    <label>Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>